euphony-sc-core/src/snapshots/euphony_sc__osc__buffer__alloc_read_test.snap
---
source: src/osc.rs
expression: msg
---
Ok(
    Message(
        OscMessage {
            addr: "/b_allocRead",
            args: [
                Int(
                    1,
                ),
                String(
                    "path/to/buffer",
                ),
                Int(
                    123,
                ),
                Int(
                    456,
                ),
            ],
        },
    ),
)
